--- a/emacs/config.org
+++ b/emacs/config.org
@@ -627,6 +627,14 @@ A couple of notes before we start going through the config for all org-related:
   ;; Disable execution of code-blocks on export by default.
   (add-to-list 'org-babel-default-header-args '(:eval . "never-export"))
 
+  ;; https://emacs.stackexchange.com/a/18146
+  ;; I want this bindings for references, etc. + don't add files to agenda
+  ;; often enough to warrant having a binding for it.
+  (require 'bind-key)
+  (unbind-key "C-c [" org-mode-map)
+  (unbind-key "C-c ]" org-mode-map)
+  (unbind-key "C-c ," org-mode-map)
+
   ;; If `flycheck` is installed, disable `flycheck` in src-blocks.
   ;; NOTE: This is maybe a bit "harsh". Could potentially just disable certain
   ;; features of `flycheck`.
