--- a/emacs/config.org
+++ b/emacs/config.org
@@ -1,8 +1,7 @@
 * =init.el= v2
 :PROPERTIES:
-:header-args: emacs-lisp: :tangle init-new-v2.el :comments link
+:header-args: emacs-lisp: :tangle init-new.el :comments link
 :END:
-
 ** Basic
 #+begin_src emacs-lisp
 ;; Customize user interface.
@@ -381,9 +380,10 @@ Languages should then set the local variable =prettify-symbols-alist= on their o
 (use-package vterm
   :config (setq vterm-buffer-name-string "*vterm [%s]*"))
 #+end_src
+
 ** Programming & Markup
 *** Flycheck
-#+begin_src emacs-lisp 
+#+begin_src emacs-lisp
 (use-package flycheck
   :config
   ;; Make `flycheck' recognize the packages available in Emacs' `load-path'.
