--- a/emacs/config.org
+++ b/emacs/config.org
@@ -797,7 +797,59 @@ A couple of notes before we start going through the config for all org-related:
 #+end_src
 
 *** Org Export
+**** Jupyter notebook
+#+begin_src emacs-lisp
+(use-package ox-ipynb
+  :straight (:type git :host github :repo "jkitchen/ox-ipynb")
+  :init
+  ;; It doesn't respect the `(org-babel-jupyter-override-src-block "python")' statements
+  ;; and so it won't recognize `python' blocks as `jupyter-python', and thus not export properly.
+  (setq ox-ipynb-kernelspecs '((R . (kernelspec . ((display_name . "R")
+                                                   (language . "R")
+                                                   (name . "ir"))))
+                               (julia . (kernelspec . ((display_name . "Julia 0.6.0")
+                                                       (language . "julia")
+                                                       (name . "julia-0.6"))))
+                               (jupyter-python . (kernelspec . ((display_name . "Python 3")
+                                                                (language . "python")
+                                                                (name . "python3"))))
+                               (python . (kernelspec . ((display_name . "Python 3")
+                                                        (language . "python")
+                                                        (name . "python3"))))))
 
+
+  (setq ox-ipynb-language-infos
+        '((jupyter-python . (language_info . ((codemirror_mode . ((name . ipython)
+                                                                  (version . 3)))
+                                              (file_extension . ".py")
+                                              (mimetype . "text/x-python")
+                                              (name . "python")
+                                              (nbconvert_exporter . "python")
+                                              (pygments_lexer . "ipython3")
+                                              (version . "3.5.2"))))
+          (python . (language_info . ((codemirror_mode . ((name . ipython)
+                                                          (version . 3)))
+                                      (file_extension . ".py")
+                                      (mimetype . "text/x-python")
+                                      (name . "python")
+                                      (nbconvert_exporter . "python")
+                                      (pygments_lexer . "ipython3")
+                                      (version . "3.5.2"))))
+
+          (julia . (language_info . ((codemirror_mode . "julia")
+                                     (file_extension . ".jl")
+                                     (mimetype . "text/x-julia")
+                                     (name . "julia")
+                                     (pygments_lexer . "julia")
+                                     (version . "0.6.0"))))
+
+          (R . (language_info . ((codemirror_mode . "r")
+                                 (file_extension . ".r")
+                                 (mimetype . "text/x-r-source")
+                                 (name . "R")
+                                 (pygments_lexer . "r")
+                                 (version . "3.3.2")))))))
+#+end_src
 *** Org-roam
 #+begin_src emacs-lisp
 (use-package org-roam
