--- a/emacs/config.org
+++ b/emacs/config.org
@@ -39,7 +39,40 @@
 ;; rather than just trying to scroll.
 (setq scroll-error-top-bottom t)
 #+end_src
+*** Make =format-time-string= consistent across OS time settings
+#+begin_src emacs-lisp
+;; Ensures that we're always going to format the string according to EN locale.
+;; Setting `system-time-locale' to `"C"' or something doesn't work for daemon-mode.
+;; This is copy-paste from https://kisaragi-hiu.com/blog/2019-10-09-format-time-string-today.html.
+(require 'calendar)
+(defun kisaragi/english-dow (&optional time zone abbreviated)
+  "Return ABBREVIATED name of the day of week at TIME and ZONE.
 
+If TIME or ZONE is nil, use `current-time' or `current-time-zone'."
+  (unless time (setq time (current-time)))
+  (unless zone (setq zone (current-time-zone)))
+  (calendar-day-name
+   (pcase-let ((`(,_ ,_ ,_ ,d ,m ,y . ,_)
+                (decode-time time zone)))
+     (list m d y))
+   abbreviated))
+
+(defun kisaragi/advice-format-time-string (func format &optional time zone)
+  "Pass FORMAT, TIME, and ZONE to FUNC.
+
+Replace \"%A\" in FORMAT with English day of week of today,
+\"%a\" with the abbreviated version."
+  (let* ((format (replace-regexp-in-string "%a" (kisaragi/english-dow time zone t)
+                                           format))
+         (format (replace-regexp-in-string "%A" (kisaragi/english-dow time zone nil)
+                                           format)))
+    (funcall func format time zone)))
+
+	
+(advice-add 'format-time-string :around #'kisaragi/advice-format-time-string)
+#+end_src
+
+#+RESULTS:
 ** File backup
 #+begin_src emacs-lisp
 ;; Write auto-saves and backups to separate directory.
